# akaeii_python

./: main.py  notes.txt  pyproject.toml
asynchronous_programming/: pokedex.py  pokedex_sync.py  pokemon_list.txt  testing_grounds.py
asynchronous_programming/pokemon/: pokedex_async.py  pokedex_async_results.txt  pokedex_sync.py  pokedex_sync_results.txt  pokemon_list.txt
